--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -1,5 +1,6 @@
 {
   "New API key": "新しい API キー",
+  "Delete": "削除",
   "Revoke": "無効化",
   "Revoke API key": "Revoke API key",
   "Revoke token": "トークンを取り消す",
@@ -25,7 +26,6 @@
   "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.": "このコレクションをアーカイブすると、その中のすべてのドキュメントもアーカイブされます。コレクション内のドキュメントは検索結果に表示されなくなります。",
   "Restore": "復元",
   "Collection restored": "コレクションが復元されました",
-  "Delete": "削除",
   "Delete collection": "コレクションを削除",
   "New template": "新規テンプレート",
   "Delete comment": "コメントを削除",
@@ -326,12 +326,25 @@
   "Everyone in the workspace": "ワークスペースにいる全ての人",
   "{{ count }} member": "{{ count }} 人のメンバー",
   "{{ count }} member_plural": "{{ count }} 人のメンバー",
+  "Only lowercase letters, digits and dashes allowed": "小文字、数字、ダッシュのみ使用できます",
+  "Sorry, this link has already been used": "このリンクは既に使用されています",
+  "Public link copied to clipboard": "公開リンクをクリップボードにコピーしました",
+  "Web": "ウェブ",
+  "Allow anyone with the link to access": "リンクを持っている誰もがアクセス可能",
+  "Publish to internet": "インターネットに公開する",
+  "Search engine indexing": "検索エンジンのインデックス",
+  "Disable this setting to discourage search engines from indexing the page": "この設定を無効にすると、検索エンジンのインデックス化を防ぐことができます",
+  "Show last modified": "Show last modified",
+  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "招待",
   "{{ userName }} was added to the collection": "{{ userName }} をコレクションに追加しました",
   "{{ count }} people added to the collection": "{{ count }} 人をコレクションに追加しました",
   "{{ count }} people added to the collection_plural": "{{ count }} 人をコレクションに追加しました",
   "{{ count }} people and {{ count2 }} groups added to the collection": "{{ count }} 人と {{ count2 }} 個のグループをコレクションに追加しました",
   "{{ count }} people and {{ count2 }} groups added to the collection_plural": "{{ count }} 人と {{ count2 }} 個のグループをコレクションに追加しました",
+  "Switch to dark": "ダークテーマに切り替え",
+  "Switch to light": "ライトテーマに切り替え",
   "Add": "追加",
   "Add or invite": "追加または招待",
   "Viewer": "閲覧者",
@@ -356,17 +369,8 @@
   "Active <1></1> ago": "<1></1> 前にアクティブ",
   "Never signed in": "ログインしたことがありません",
   "Leave": "退出する",
-  "Only lowercase letters, digits and dashes allowed": "小文字、数字、ダッシュのみ使用できます",
-  "Sorry, this link has already been used": "このリンクは既に使用されています",
-  "Public link copied to clipboard": "公開リンクをクリップボードにコピーしました",
-  "Web": "ウェブ",
-  "Anyone with the link can access because the parent document, <2>{{documentTitle}}</2>, is shared": "親ドキュメント <2>{{documentTitle}}</2> が共有されているため、リンクを持っている人は誰でもアクセスできます",
-  "Allow anyone with the link to access": "リンクを持っている誰もがアクセス可能",
-  "Publish to internet": "インターネットに公開する",
-  "Search engine indexing": "検索エンジンのインデックス",
-  "Disable this setting to discourage search engines from indexing the page": "この設定を無効にすると、検索エンジンのインデックス化を防ぐことができます",
-  "Show last modified": "Show last modified",
-  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared",
+  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "子ドキュメントは Web で共有されません\nアクセスを有効にするためには共有を切り替えてください\nこれは今後のデフォルトとなります",
   "{{ userName }} was added to the document": "{{ userName }} をドキュメントに追加しました",
   "{{ count }} people added to the document": "{{ count }} 人をドキュメントに追加しました",
@@ -571,6 +575,7 @@
   "Share link revoked": "共有リンクを無効にしました",
   "Share link copied": "共有リンクをコピーしました",
   "Share options": "共有オプション",
+  "Go to collection": "Go to collection",
   "Go to document": "ドキュメントに移動",
   "Revoke link": "リンクを無効化",
   "Contents": "目次",
@@ -670,8 +675,6 @@
   "Show contents": "コンテンツを表示",
   "available when headings are added": "見出しが追加されると利用可能です",
   "Edit {{noun}}": "{{noun}} を編集",
-  "Switch to dark": "ダークテーマに切り替え",
-  "Switch to light": "ライトテーマに切り替え",
   "Archived": "アーカイブ",
   "Save draft": "下書きを保存",
   "Done editing": "編集完了",
@@ -713,7 +716,6 @@
   "Backlinks": "ハイパーリンク",
   "Close": "閉じる",
   "This document is large which may affect performance": "This document is large which may affect performance",
-  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} は {{ appName }} を使用してドキュメントを共有しています。続けるにはログインしてください。",
   "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?": "<em>{{ documentTitle }}</em> を削除してもよろしいですか？",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "<em>{{ documentTitle }}</em>ドキュメントを削除すると、その履歴もすべて削除されます。このまま続けますか？",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.": "<em>{{ documentTitle }}</em> ドキュメントを削除すると、その履歴と <em>ドキュメント内の{{ any }} </em>も全て削除されます。よろしいですか？",
@@ -1004,6 +1006,7 @@
   "Guest": "ゲスト",
   "Never used": "Never used",
   "Are you sure you want to delete the {{ appName }} application? This cannot be undone.": "Are you sure you want to delete the {{ appName }} application? This cannot be undone.",
+  "Title": "Title",
   "Shared by": "共有者",
   "Date shared": "共有日",
   "Last accessed": "最終アクセス",
@@ -1146,6 +1149,7 @@
   "You can create templates to help your team create consistent and accurate documentation.": "チームが一貫性のある正確なドキュメントを作成するのに役立つテンプレートを作成できます。",
   "Alphabetical": "アルファベット順",
   "There are no templates just yet.": "テンプレートが見つかりません。",
+  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} は {{ appName }} を使用してドキュメントを共有しています。続けるにはログインしてください。",
   "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.": "登録されたメールアドレスに認証用のコードが送信されました。ワークスペースを永久に削除するには、メール内のコードを入力してください。",
   "Confirmation code": "認証コード",
   "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.": "<1>{{workspaceName}}</1> ワークスペースを削除すると、全てのコレクション、ドキュメント、ユーザー、および関連データが破棄されます。 {{appName}} からすぐにログアウトされます。",
