--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -1,5 +1,6 @@
 {
   "New API key": "Nieuwe API-sleutel",
+  "Delete": "Verwijder",
   "Revoke": "Intrekken",
   "Revoke API key": "Revoke API key",
   "Revoke token": "Tokens intrekken",
@@ -25,7 +26,6 @@
   "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.": "Het archiveren van deze collectie zal ook alle documenten erin archiveren. Documenten uit de collectie zullen niet langer zichtbaar zijn in de zoekresultaten.",
   "Restore": "Herstel",
   "Collection restored": "Collectie aangemaakt",
-  "Delete": "Verwijder",
   "Delete collection": "Verwijder collectie",
   "New template": "Nieuw sjabloon",
   "Delete comment": "Verwijder reactie",
@@ -326,12 +326,25 @@
   "Everyone in the workspace": "Iedereen in de workspace",
   "{{ count }} member": "{{ count }} lid",
   "{{ count }} member_plural": "{{ count }} leden",
+  "Only lowercase letters, digits and dashes allowed": "Alleen kleine letters, cijfers en streepjes zijn toegestaan",
+  "Sorry, this link has already been used": "Sorry, deze link is al in gebruik",
+  "Public link copied to clipboard": "Openbare link gekopieerd naar klembord",
+  "Web": "Web",
+  "Allow anyone with the link to access": "Geef iedereen met de link toegang",
+  "Publish to internet": "Publiceer op internet",
+  "Search engine indexing": "Indexering zoekmachine",
+  "Disable this setting to discourage search engines from indexing the page": "Schakel deze instelling uit om zoekmachines te ontmoedigen bij het indexeren van de pagina",
+  "Show last modified": "Toon laatst gewijzigd",
+  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "Uitnodigen",
   "{{ userName }} was added to the collection": "{{ userName }} is aan de verzameling toegevoegd",
   "{{ count }} people added to the collection": "{{ count }} is aan de verzameling toegevoegd",
   "{{ count }} people added to the collection_plural": "{{ count }} is aan de verzameling toegevoegd",
   "{{ count }} people and {{ count2 }} groups added to the collection": "{{ count }} personen en {{ count2 }} groepen toegevoegd aan de collectie",
   "{{ count }} people and {{ count2 }} groups added to the collection_plural": "{{ count }} personen en {{ count2 }} groepen toegevoegd aan de collectie",
+  "Switch to dark": "Wissel naar donker thema",
+  "Switch to light": "Wissel naar licht thema",
   "Add": "Toevoegen",
   "Add or invite": "Toevoegen of uitnodigen",
   "Viewer": "Kijker",
@@ -356,17 +369,8 @@
   "Active <1></1> ago": "Actief <1></1> geleden",
   "Never signed in": "Nog nooit ingelogd",
   "Leave": "Afsluiten",
-  "Only lowercase letters, digits and dashes allowed": "Alleen kleine letters, cijfers en streepjes zijn toegestaan",
-  "Sorry, this link has already been used": "Sorry, deze link is al in gebruik",
-  "Public link copied to clipboard": "Openbare link gekopieerd naar klembord",
-  "Web": "Web",
-  "Anyone with the link can access because the parent document, <2>{{documentTitle}}</2>, is shared": "Iedereen met de link heeft toegang, omdat het bovenliggend document <2>{{documentTitle}}</2> wordt gedeeld",
-  "Allow anyone with the link to access": "Geef iedereen met de link toegang",
-  "Publish to internet": "Publiceer op internet",
-  "Search engine indexing": "Indexering zoekmachine",
-  "Disable this setting to discourage search engines from indexing the page": "Schakel deze instelling uit om zoekmachines te ontmoedigen bij het indexeren van de pagina",
-  "Show last modified": "Toon laatst gewijzigd",
-  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared",
+  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "Geneste documenten worden niet gedeeld op het web, schakel hiervoor delen in. Dit zal in de toekomst de standaardinstelling zijn.",
   "{{ userName }} was added to the document": "{{ userName }} is uitgenodigd voor het document",
   "{{ count }} people added to the document": "{{ count }} persoon uitgenodigd voor het document",
@@ -571,6 +575,7 @@
   "Share link revoked": "Deel-link ingetrokken",
   "Share link copied": "Deel-link gekopieerd",
   "Share options": "Deel opties",
+  "Go to collection": "Go to collection",
   "Go to document": "Ga naar document",
   "Revoke link": "Trek link in",
   "Contents": "Inhoud",
@@ -670,8 +675,6 @@
   "Show contents": "Inhoud weergeven",
   "available when headings are added": "beschikbaar wanneer rubrieken worden toegevoegd",
   "Edit {{noun}}": "Wijzig {{noun}}",
-  "Switch to dark": "Wissel naar donker thema",
-  "Switch to light": "Wissel naar licht thema",
   "Archived": "Gearchiveerd",
   "Save draft": "Bewaar concept",
   "Done editing": "Klaar met bewerken",
@@ -713,7 +716,6 @@
   "Backlinks": "Backlinks",
   "Close": "Sluiten",
   "This document is large which may affect performance": "Dit document is groot wat de prestaties kan beïnvloeden",
-  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} gebruikt {{ appName }} om documenten te delen, log alsjeblieft in om door te gaan.",
   "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?": "Weet je zeker dat je het sjabloon <em>{{ documentTitle }}</em> wilt verwijderen?",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "Weet je het zeker? Door het <em>{{ documentTitle }}</em> document te verwijderen zal ook alle geschiedenis hiervan worden verwijderd</em>.",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.": "Weet je dat zeker? Als u het <em>{{ documentTitle }}</em> -document verwijdert, worden de hele geschiedenis en <em>{{ any }} genest document</em> verwijderd.",
@@ -1004,6 +1006,7 @@
   "Guest": "Gast",
   "Never used": "Never used",
   "Are you sure you want to delete the {{ appName }} application? This cannot be undone.": "Are you sure you want to delete the {{ appName }} application? This cannot be undone.",
+  "Title": "Title",
   "Shared by": "Gedeeld door",
   "Date shared": "Datum gedeeld",
   "Last accessed": "Laatst geopend",
@@ -1146,6 +1149,7 @@
   "You can create templates to help your team create consistent and accurate documentation.": "Je kan sjablonen maken om je team te helpen met het maken van consistente en nauwkeurige documentatie.",
   "Alphabetical": "Alfabetisch",
   "There are no templates just yet.": "Er zijn nog geen sjablonen.",
+  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} gebruikt {{ appName }} om documenten te delen, log alsjeblieft in om door te gaan.",
   "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.": "Een bevestigingscode is naar je e-mailadres verzonden, voer hieronder de code in om deze workspace permanent te verwijderen.",
   "Confirmation code": "Bevestigingscode",
   "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.": "Het verwijderen van de <1>{{workspaceName}}</1> workspace zal alle collecties, documenten, gebruikers en bijbehorende gegevens verwijderen. Je wordt onmiddellijk uitgelogd bij {{appName}}.",
