--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -1,5 +1,6 @@
 {
   "New API key": "Ny API-nøkkel",
+  "Delete": "Slett",
   "Revoke": "Opphev",
   "Revoke API key": "Revoke API key",
   "Revoke token": "Opphev token",
@@ -25,7 +26,6 @@
   "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.": "Ved å arkivere denne samlingen vil du også arkivere alle dokumenter inkludert. Dokumenter fra samlingen vil ikke lenger være synlige i søkeresultater.",
   "Restore": "Gjenopprett",
   "Collection restored": "Samling gjenopprettet",
-  "Delete": "Slett",
   "Delete collection": "Slett samling",
   "New template": "Ny mal",
   "Delete comment": "Slett kommentar",
@@ -326,12 +326,25 @@
   "Everyone in the workspace": "Alle i arbeidsområdet",
   "{{ count }} member": "{{ count }} medlem",
   "{{ count }} member_plural": "{{ count }} medlemmer",
+  "Only lowercase letters, digits and dashes allowed": "Kun små bokstaver, sifre og bindestreker tillatt",
+  "Sorry, this link has already been used": "Beklager, denne lenken har allerede blitt brukt",
+  "Public link copied to clipboard": "Offentlig lenke kopiert til utklippstavlen",
+  "Web": "Web",
+  "Allow anyone with the link to access": "Tillat alle med lenken å få tilgang til",
+  "Publish to internet": "Publiser til internett",
+  "Search engine indexing": "Søkemotorindeksering",
+  "Disable this setting to discourage search engines from indexing the page": "Deaktiver denne innstillingen for å fraråde søkemotorer til å indeksere denne siden",
+  "Show last modified": "Vis sist endret",
+  "Display the last modified timestamp on the shared page": "Vis sist endret tidsstempel på den delte siden",
+  "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "Inviter",
   "{{ userName }} was added to the collection": "{{ userName }} ble lagt til i samlingen",
   "{{ count }} people added to the collection": "{{ count }} personer lagt til i samlingen",
   "{{ count }} people added to the collection_plural": "{{ count }} personer lagt til i samlingen",
   "{{ count }} people and {{ count2 }} groups added to the collection": "{{ count }} personer og {{ count2 }} grupper lagt til i samlingen",
   "{{ count }} people and {{ count2 }} groups added to the collection_plural": "{{ count }} personer og {{ count2 }} grupper lagt til i samlingene",
+  "Switch to dark": "Bytt til mørkt",
+  "Switch to light": "Bytt til lyst",
   "Add": "Legg til",
   "Add or invite": "Legg til eller inviter",
   "Viewer": "Seer",
@@ -356,17 +369,8 @@
   "Active <1></1> ago": "Aktiv <1></1> siden",
   "Never signed in": "Aldri logget inn",
   "Leave": "Forlat",
-  "Only lowercase letters, digits and dashes allowed": "Kun små bokstaver, sifre og bindestreker tillatt",
-  "Sorry, this link has already been used": "Beklager, denne lenken har allerede blitt brukt",
-  "Public link copied to clipboard": "Offentlig lenke kopiert til utklippstavlen",
-  "Web": "Web",
-  "Anyone with the link can access because the parent document, <2>{{documentTitle}}</2>, is shared": "Alle med koblingen har tilgang fordi det overordnede dokumentet, <2>{{documentTitle}}</2>, deles",
-  "Allow anyone with the link to access": "Tillat alle med lenken å få tilgang til",
-  "Publish to internet": "Publiser til internett",
-  "Search engine indexing": "Søkemotorindeksering",
-  "Disable this setting to discourage search engines from indexing the page": "Deaktiver denne innstillingen for å fraråde søkemotorer til å indeksere denne siden",
-  "Show last modified": "Vis sist endret",
-  "Display the last modified timestamp on the shared page": "Vis sist endret tidsstempel på den delte siden",
+  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared",
+  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "Underdokumenter deles ikke på nettet. Aktiver deling for å tillate tilgang, dette vil være standard oppførsel i fremtiden",
   "{{ userName }} was added to the document": "{{ userName }} ble lagt til i dokumentet",
   "{{ count }} people added to the document": "{{ count }} person er lagt til i dokumentet",
@@ -571,6 +575,7 @@
   "Share link revoked": "Delingslenke opphevet",
   "Share link copied": "Delingslenke kopiert",
   "Share options": "Delingsalternativer",
+  "Go to collection": "Go to collection",
   "Go to document": "Gå til dokument",
   "Revoke link": "Opphev lenke",
   "Contents": "Innhold",
@@ -670,8 +675,6 @@
   "Show contents": "Vis innhold",
   "available when headings are added": "tilgjengelig når overskrifter legges til",
   "Edit {{noun}}": "Rediger {{noun}}",
-  "Switch to dark": "Bytt til mørkt",
-  "Switch to light": "Bytt til lyst",
   "Archived": "Arkivert",
   "Save draft": "Lagre utkast",
   "Done editing": "Ferdig med redigering",
@@ -713,7 +716,6 @@
   "Backlinks": "Tilbakekoblinger",
   "Close": "Lukk",
   "This document is large which may affect performance": "Dette dokumentet er stort og kan påvirke ytelsen",
-  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} bruker {{ appName }} til å dele dokumenter, vennligst logg inn for å fortsette.",
   "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?": "Er du sikker på at du vil slette <em>{{ documentTitle }}</em>-malen?",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "Er du sikker på det? Sletting av <em>{{ documentTitle }}</em>-dokumentet vil slette hele dens historikk</em>.",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.": "Er du sikker på det? Sletting av <em>{{ documentTitle }}</em>-dokumentet vil slette hele dens historikk og <em>{{ any }} underdokument</em>.",
@@ -1004,6 +1006,7 @@
   "Guest": "Gjest",
   "Never used": "Aldri brukt",
   "Are you sure you want to delete the {{ appName }} application? This cannot be undone.": "Er du sikker på at du vil slette {{ appName }} applikasjonen? Dette kan ikke angres.",
+  "Title": "Title",
   "Shared by": "Delt av",
   "Date shared": "Dato delt",
   "Last accessed": "Sist tilgjengelig",
@@ -1146,6 +1149,7 @@
   "You can create templates to help your team create consistent and accurate documentation.": "Du kan opprette maler for å hjelpe teamet ditt med å lage konsistent og nøyaktig dokumentasjon.",
   "Alphabetical": "Alfabetisk",
   "There are no templates just yet.": "Det er ingen maler ennå.",
+  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} bruker {{ appName }} til å dele dokumenter, vennligst logg inn for å fortsette.",
   "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.": "En bekreftelseskode har blitt sendt til din e-postadresse, vennligst skriv inn koden nedenfor for å slette dette arbeidsområdet permanent.",
   "Confirmation code": "Bekreftelseskode",
   "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.": "Sletting av <1>{{workspaceName}}</1>-arbeidsområdet vil ødelegge alle samlinger, dokumenter, brukere og tilknyttede data. Du vil umiddelbart bli logget ut av {{appName}}.",
