--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -103,6 +103,7 @@
   "Leave document": "Opustit dokument",
   "You have left the shared document": "Opustil jste sdílený dokument",
   "Could not leave document": "Nepodařilo se opustit dokument",
+  "Disconnect analytics": "Disconnect analytics",
   "Home": "Domovská stránka",
   "Drafts": "Koncepty",
   "Search": "Hledat",
@@ -194,6 +195,10 @@
   "Collections could not be loaded, please reload the app": "Sbírky se nepodařilo načíst, prosím načtěte aplikaci znovu",
   "Start view": "Domovská obrazovka",
   "Install now": "Nainstalovat",
+  "Disconnect": "Odpojit",
+  "Disconnecting": "Odpojování",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Odstraněná sbírka",
   "Untitled": "Bez názvu",
   "Unpin": "Zrušit připnutí",
@@ -941,8 +946,6 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Skutečně chcete zrušit token {{ tokenName }}?",
   "Disconnect integration": "Odebrat integraci",
   "Connected": "Připojeno",
-  "Disconnect": "Odpojit",
-  "Disconnecting": "Odpojování",
   "Allowed domains": "Povolené domény",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Domény, které by měly mít povoleno vytvářet nové účty pomocí SSO. Změna tohoto nastavení nemá vliv na stávající uživatelské účty.",
   "Remove domain": "Odstranit doménu",
