--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -175,7 +175,7 @@
   "currently viewing": "en train de consulter",
   "previously edited": "modifié précédemment",
   "You": "Vous",
-  "Avatar of {{ name }}": "Avatar of {{ name }}",
+  "Avatar of {{ name }}": "Avatar de {{ name }}",
   "Viewers": "Lecteurs",
   "Collections are used to group documents and choose permissions": "Les collections sont utilisées pour regrouper les documents et définir les permissions",
   "Name": "Nom",
@@ -284,7 +284,7 @@
   "Including uploaded images and files in the exported data": "Inclure les images et fichiers transférés dans les données exportées",
   "{{count}} more user": "{{count}} utilisateur supplémentaire",
   "{{count}} more user_plural": "{{count}} utilisateurs supplémentaires",
-  "Filter options": "Filter options",
+  "Filter options": "Options de filtre",
   "Filter": "Filtre",
   "No results": "Aucun résultat",
   "{{authorName}} created <3></3>": "{{authorName}} créé <3></3>",
@@ -317,11 +317,11 @@
   "Change Language": "Changer de langue",
   "Dismiss": "Fermer",
   "Lightbox": "Lightbox",
-  "View, navigate, or download images in the document": "View, navigate, or download images in the document",
+  "View, navigate, or download images in the document": "Afficher, naviguer ou télécharger des images dans le document",
   "Close": "Fermer",
-  "Previous": "Previous",
-  "Next": "Next",
-  "Image failed to load": "Image failed to load",
+  "Previous": "Précédent",
+  "Next": "Suivant",
+  "Image failed to load": "Échec du chargement de l'image",
   "You’re offline.": "Vous êtes hors-ligne.",
   "Sorry, an error occurred.": "Désolé, une erreur est survenue.",
   "Click to retry": "Cliquez pour réessayer",
@@ -330,7 +330,7 @@
   "Mark all as read": "Tout marquer comme lu",
   "You're all caught up": "Vous êtes à jour",
   "Icon": "Icône",
-  "OAuth client icon": "OAuth client icon",
+  "OAuth client icon": "Icône du client OAuth",
   "My App": "Mon application",
   "Tagline": "Accroche",
   "A short description": "Une courte description",
@@ -407,15 +407,15 @@
   "{{ count }} groups added to the document": "{{ count }} groupes ajoutés au document",
   "{{ count }} groups added to the document_plural": "{{ count }} groupes ajoutés au document",
   "Logo": "Logo",
-  "Expand sidebar": "Expand sidebar",
-  "Collapse sidebar": "Collapse sidebar",
+  "Expand sidebar": "Développer la barre latérale",
+  "Collapse sidebar": "Réduire la barre latérale",
   "Archived collections": "Collections archivées",
   "New doc": "Nouveau doc",
   "Empty": "Vide",
   "Collapse": "Réduire",
   "Expand": "Développer",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Document non pris en charge - essayez un format Markdown, Text, HTML ou Word",
-  "Import files": "Import files",
+  "Import files": "Importer des fichiers",
   "Go back": "Revenir en arrière",
   "Go forward": "Continuer",
   "Could not load shared documents": "Impossible de charger les documents partagés",
@@ -465,23 +465,23 @@
   "Replacement": "Remplacement",
   "Replace": "Remplacer",
   "Replace all": "Tout remplacer",
-  "Image width": "Image width",
-  "Width": "Width",
-  "Image height": "Image height",
-  "Height": "Height",
+  "Image width": "Largeur de l'image",
+  "Width": "Largeur",
+  "Image height": "Hauteur de l'image",
+  "Height": "Hauteur",
   "Profile picture": "Photo de profil",
   "Create a new doc": "Créer un nouveau doc",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} ne sera pas notifié, car il n'a pas accès à ce document",
   "Keep as link": "Garder comme lien",
   "Mention": "Mentionner",
   "Embed": "Intégrer",
-  "More options": "More options",
-  "Insert after": "Insert after",
-  "Insert before": "Insert before",
-  "Move up": "Move up",
-  "Move down": "Move down",
-  "Move left": "Move left",
-  "Move right": "Move right",
+  "More options": "Plus d'options",
+  "Insert after": "Insérer après",
+  "Insert before": "Insérer avant",
+  "Move up": "Déplacer vers le haut",
+  "Move down": "Déplacer vers le bas",
+  "Move left": "Déplacer vers la gauche",
+  "Move right": "Déplacer vers la droite",
   "Align center": "Aligner au centre",
   "Align left": "Aligner à gauche",
   "Align right": "Aligner à droite",
@@ -691,7 +691,7 @@
   "only you": "moi uniquement",
   "person": "personne",
   "people": "personnes",
-  "Document title": "Document title",
+  "Document title": "Titre du document",
   "Last updated": "Dernière mise à jour",
   "Type '/' to insert, or start writing…": "Tapez '/' pour insérer, ou commencez à écrire…",
   "Hide contents": "Masquer le contenu",
@@ -936,7 +936,7 @@
   "Rotate secret": "Changer le secret",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotation du secret client invalidera le secret actuel. Assurez-vous de mettre à jour toutes les applications utilisant ces identifiants.",
   "Displayed to users when authorizing": "Affiché aux utilisateurs lors de l'autorisation",
-  "Application icon": "Application icon",
+  "Application icon": "Icône de l'application",
   "Developer information shown to users when authorizing": "Informations du développeur affichées aux utilisateurs lors de l'autorisation",
   "Developer name": "Nom du développeur",
   "Developer URL": "URL de développement",
@@ -1000,8 +1000,8 @@
   "Search people": "Rechercher des personnes",
   "No people matching your search": "Aucune personne ne correspond à votre recherche",
   "No people left to add": "Plus aucune personne à ajouter",
-  "Group admin": "Group admin",
-  "Member": "Member",
+  "Group admin": "Admin du groupe",
+  "Member": "Membre",
   "Admins": "Administrateurs",
   "Date created": "Créé le",
   "Crop Image": "Rogner l'image",
@@ -1044,7 +1044,7 @@
   "These settings affect the way that your workspace appears to everyone on the team.": "Ces paramètres changent la façon dont l'espace de travail apparait pour tous les membres de l'équipe.",
   "Display": "Affichage",
   "The logo is displayed at the top left of the application.": "Le logo apparaît en haut à gauche de l'application.",
-  "Workspace logo": "Workspace logo",
+  "Workspace logo": "Logo de l'espace de travail",
   "The workspace name, usually the same as your company name.": "Le nom de l'espace de travail, généralement le même que celui de votre entreprise.",
   "Description": "Description",
   "A short description of your workspace.": "Une courte description de votre espace de travail.",
@@ -1275,7 +1275,7 @@
   "{{ user }} updated {{ timeAgo }}": "Mis à jour par {{ user }} il y a {{ timeAgo }}",
   "You created {{ timeAgo }}": "Créé par vous il y a {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "Créé par {{ user }} il y a {{ timeAgo }}",
-  "Caption": "Caption",
-  "Open": "Open",
+  "Caption": "Légende",
+  "Open": "Ouvrir",
   "Error loading data": "Erreur de chargement des données"
 }
