--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -12,6 +12,11 @@
   "Permissions": "Perizinan",
   "Collection permissions": "Perizinan koleksi",
   "Share this collection": "Bagikan koleksi ini",
+  "Import document": "Impor dokumen",
+  "Sort in sidebar": "Urutkan di sidebar",
+  "A-Z sort": "A-Z sort",
+  "Z-A sort": "Z-A sort",
+  "Manual sort": "Pengurutan manual",
   "Search in collection": "Cari di koleksi",
   "Star": "Bintangi",
   "Unstar": "Berhenti membintangi",
@@ -83,7 +88,6 @@
   "Search in document": "Search in document",
   "Print": "Cetak",
   "Print document": "Cetak dokumen",
-  "Import document": "Impor dokumen",
   "Templatize": "Jadikan template",
   "Create template": "Buat template",
   "Open random document": "Buka dokumen acak",
@@ -206,6 +210,8 @@
   "Move document": "Pindahkan dokumen",
   "Moving": "Memindahkan",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.",
+  "More options": "More options",
+  "Submenu": "Submenu",
   "Collections could not be loaded, please reload the app": "Koleksi tidak dapat dimuat, harap muat ulang aplikasi",
   "Start view": "Tampilan awal",
   "Install now": "Pasang sekarang",
@@ -216,7 +222,6 @@
   "Deleted Collection": "Koleksi Dihapus",
   "Untitled": "Tak Berjudul",
   "Unpin": "Unpin",
-  "{{ minutes }}m read": "{{ minutes }}m read",
   "Select a location to copy": "Select a location to copy",
   "Document copied": "Document copied",
   "Couldn’t copy the document, try again?": "Couldn’t copy the document, try again?",
@@ -345,6 +350,7 @@
   "Reaction picker": "Reaction picker",
   "Could not load reactions": "Could not load reactions",
   "Reaction": "Reaction",
+  "{{ minutes }}m read": "{{ minutes }}m read",
   "Revision deleted": "Revision deleted",
   "Current version": "Current version",
   "{{userName}} edited": "{{userName}} menyunting",
@@ -365,6 +371,8 @@
   "Disable this setting to discourage search engines from indexing the page": "Disable this setting to discourage search engines from indexing the page",
   "Show last modified": "Show last modified",
   "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "Show table of contents": "Show table of contents",
+  "Display the table of contents on documents by default": "Display the table of contents on documents by default",
   "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "Invite",
   "{{ userName }} was added to the collection": "{{ userName }} ditambahkan ke koleksi",
@@ -421,6 +429,7 @@
   "Could not load shared documents": "Could not load shared documents",
   "Shared with me": "Shared with me",
   "Show more": "Selengkapnya",
+  "Link options": "Link options",
   "Could not load starred documents": "Could not load starred documents",
   "Starred": "Berbintang",
   "Up to date": "Mutakhir",
@@ -475,7 +484,7 @@
   "Keep as link": "Keep as link",
   "Mention": "Mention",
   "Embed": "Embed",
-  "More options": "More options",
+  "Rename": "Rename",
   "Insert after": "Insert after",
   "Insert before": "Insert before",
   "Move up": "Move up",
@@ -559,7 +568,6 @@
   "Video": "Video",
   "None": "None",
   "Delete embed": "Delete embed",
-  "Rename": "Rename",
   "Could not import file": "Tidak dapat mengimpor berkas",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
@@ -577,10 +585,6 @@
   "Integrations": "Integrasi",
   "API key": "API key",
   "Show path to document": "Tampilkan path ke dokumen",
-  "Sort in sidebar": "Urutkan di sidebar",
-  "A-Z sort": "A-Z sort",
-  "Z-A sort": "Z-A sort",
-  "Manual sort": "Pengurutan manual",
   "Collection menu": "Menu koleksi",
   "Comment options": "Opsi komentar",
   "Enable viewer insights": "Enable viewer insights",
